--- a/major_project_report/sec/references.tex
+++ b/major_project_report/sec/references.tex
@@ -54,6 +54,14 @@ Data Analysis. \url{https://www.ngdata.com/what-is-data-analysis}
 
 \bibitem{rdef}
  Recommnder System. \url{http://recommender-system.blogspot.com/2012_10_01_archive.html}
+ \bibitem{demographic}
+	 Safoury, L., and Salah, A.(2013). Exploiting user demographiattributes for solving cold-start problem in recommender system.\textit{Lecture Notes on Software Engineering}, 1(3), 303
+\bibitem{recommend}
+	A. Tejal.(2015) A Survey on Recommendation System. \textit{International Journal of Innovative Research in Advanced Engineering(IJIRA)}.
+\bibitem{rmain}
+	F.O. Isinkaye, Y.O. Folajimi and B.A. Ojokoh.(2015). Recommendation Systems: Principles, methods and evaluation \textit{Egyptian Informatics Journal}.
+\bibitem{latent}
+	Non-negative matrix factorization \url{https://www.slideshare.net/BenjaminBengfort/non-negative-matrix-factorization}
   \bibitem{ng}
   Andrew Ng. (2016). Machine Learning [Video lectures].
   Retrieved July, 2016 from \url{https://www.coursera.org/learn/machine-learning}.
