--- a/major_project_report/sec/theoretical_background.tex
+++ b/major_project_report/sec/theoretical_background.tex
@@ -133,7 +133,7 @@ Some of the data analysis techniques are:
 \subsection{Recommender System}
 Recommender systems were originally defined as ``people provide recommendations as inputs, which the system then aggregates and directs toappropriate recipients'', like using experts knowledge as input for the system to enrich it's ability to recommend to people according to the given knowledge. However, now the term has a broader connotation,describing any system that produces individualized recommendations as output or has the effect of guiding the user in a personalized way to interesting or useful objects in a large space of possible options \cite{rdef}.
 
-Recommender systems are information filtering systems that deal with the problem of information overload by filtering vital information fragement out of large amount of dynamically generated information according to user's preferences, interest, or observed behavior about item. Recommender system has the ability to predict whether a particularuser would prefer an item or not based on the user's profile.
+Recommender systems are information filtering systems that deal with the problem of information overload by filtering vital information fragement out of large amount of dynamically generated information according to user's preferences, interest, or observed behavior about item. Recommender system has the ability to predict whether a particularuser would prefer an item or not based on the user's profile \cite{rmain}.
 
 Recommender system are benefical to both service providers and users.Recommendation systems have also proved to improve decision making process and quality. In e-commerce setting, recommender system aids to enhace revenues, for the fact that they are effective means of selling more products. In scientific librarires, recommender system supports users by allowing them to move beyond catalog searches. Therefore, the need to use efficient and accurate recommendation techniques within a system that will provide relevant and dependable recommendations for users cannot be over-emphasized.
 
@@ -160,7 +160,7 @@ Recommender system tpyically produce a list of recommendation in one of two ways
 		\end{enumerate}
 \end{enumerate}
 \subsubsection{Knowledge based Recommendation(Searching)}
-Knowledge based recommendation system is based on the explicit knowledge about item classification, user interest and recommendation standard(which item should be recommend in which feature). It is an alternative approach to the collaborative filtering.
+Knowledge based recommendation system \cite{recommend} is based on the explicit knowledge about item classification, user interest and recommendation standard(which item should be recommend in which feature). It is an alternative approach to the collaborative filtering.
 \paragraph{Working Mechanism}\hfill
 
 \begin{enumerate}
@@ -189,14 +189,28 @@ Knowledge based recommendation system is based on the explicit knowledge about i
 \paragraph{Cons}\hfill
 
 \subsubsection{Demographic based Recommendation}
+Demographic recommendation technique \cite{demographic} uses information about the user only. The demographic types of users include gender, age, knowledge of language, disablities, ethnicity, mobility, employement status, home  ownership and evenlocation.The system recommends items according to demographic similarities of the users.
 \paragraph{Working Mechanism}\hfill
 \begin{enumerate}
-	\item Hell
+	\item User profile creation: User profile is created based on their demographic information.
+	\item User-item matrix construction: The user-item rating matrix is constructed based on the rating of items by the user.
+	\item Recommedation : In order to recommend the item to user, the similar users are computed with the help of cosine similarity, then the ratingfor that item by that user is computed with the help of rating of neighborhood of similar user(average or weighted average).
 \end{enumerate}
 \paragraph{Pros}\hfill
+\begin{itemize}
+	\item Can identify cross-genre items.
+	\item Domain knowledge about item is not needed.
+	\item Adaptive: quality improves over time.
+\end{itemize}
 \paragraph{Cons}\hfill
+\begin{itemize}
+	\item Gathering of demographic data might lead to privacy issues.
+	\item Gray sheep problem
+	\item Stability vs Plasticity problem
+	
+\end{itemize}
 \subsubsection{Content based Filtering}
-Content based technique is a domain-dependent algorithm and it emphasizes more on the analysis of the attributes of items in order to generate predictions. When documents such as web pages, publications and news are to be recommended, content-based filtering technique is the most sucessful. In content-based filtering technique, recommendation is made on the user profiles using features extracted from the content of items the user has evaluated in the past. 
+Content based technique \cite{recommend} is a domain-dependent algorithm and it emphasizes more on the analysis of the attributes of items in order to generate predictions. When documents such as web pages, publications and news are to be recommended, content-based filtering technique is the most sucessful. In content-based filtering technique, recommendation is made on the user profiles using features extracted from the content of items the user has evaluated in the past. 
 \paragraph{Working Mechanism}\hfill
 
 \begin{enumerate}
@@ -218,13 +232,183 @@ Content based technique is a domain-dependent algorithm and it emphasizes more o
 
 \end{itemize}
 Content based filtering can outperform the collaborative, whenever the the ratio of item to user is very high.
-
 \subsubsection{Collaborative Filtering}
+Collaborative filtering \cite{rmain}is a domain-independent prediction technique used for content that cannot easily and adequately be described by metadata such as movies and music. Collaborative filtering technique works by building a database(user-item) matrix of preference for items by users. It then matches users with relevant interest and preferences by calculating similarities between their profiles to make recommendations. Such users build a group called neighborhood. An user get recommendation to those items that he has not rated before but were already positively rated by users in his neighborhood. Recommendation that are produced by CF can be either prediction or recommendation. Prediction is a numerical value expressing $R_{ij}$, expressing the predicted score of item 'j' for the user 'i', which recommendation is a list of top N items that the user will like the most as shown in the figure below. The technique of collaborative filtering can be divided into two categories: memory based and model based. 
+\begin{itemize}
+	\item Memory Based:
+		This approach uses user rating data to compute the similarity between users or items. This is used for making recommendations. This was an early approach used in many commercial systems. It's effective and easy to implement. Typical examples of this approaches are neighbourhood-based CF and item-based/user-based top-N recommendations. Ths user based top-N recommendation algorithm uses a similarity based vector model to identify the $k$ most similar users to an active user. After the $k$ msot similar users are found their corresponding user-item matrices are aggregated to identify the set of items ot be recommended.
+The advantages with this approach include: the explainability of the results, which is an important aspect of recommendation system, easy creation and use, easy faciliation of new data, content-independence of the items being recommended, good scaling with corated items.There are several disadvantages with this approach. It's performance decreases when data gets sparse, which occurs frequently with web-related items. This might hinder the scalability of this approach and createsproblems with large datasets.
+
+\item Model Based:
+	In this approach, models are developed using different data mining, machine learning algorithms to predict user's rating of unrated items. There are many model-based CF algorithms. Bayesian networks, clustering models, latent semantic models such as singular value decomposition, probablistic latent semantic analysis, multiple multiplicative factor etc.
+
+In this model, methods like singular value decomposition, principle component analysis, known as latent factor models, compress user-item matrix into a low-dimensional representation in terms of latent factors. One advantage of using this approach is that instead of having a high dimensional matrix containing abundant number of missing values,will be dealing with a much smaller matrix in lower-dimensional space. A reduced presentation could be utilized for either user-based or iitem-base neighborhood algorithms. It handles the sparsity of the original matrix better than memory based ones.
+\end{itemize}
 \paragraph{Working Mechanism}\hfill
 \begin{enumerate}
 	\item Hell
 \end{enumerate}
 \paragraph{Pros}\hfill
+
+\begin{itemize}
+	\item Can identify cross-genre items.
+	\item Domain knowledge not needed
+	\item Adaptive: quality improves over time.
+	\item Implicit feedback sufficient.
+\end{itemize}
 \paragraph{Cons}\hfill
+
+\begin{itemize}
+	\item New user/item ramp-up problems(cold-start problem)
+	\item Gray sheep problem
+	\item Stability vs Plasticity problem
+\end{itemize}
 \subsubsection{Hybrid Recommedendation System}
 All of the known recommendation techniques have strengths and weakness and many researchers choose to combine the techniques in different ways.
+The different approaches used for the modeling of hybrid recommendation system are:
+\begin{itemize}
+	\item Weighted: The scores of several recommendation techniques are combined together to produce a single recommendation.
+	\item Switching: The system switches between recommendation techniques depending on the current situation.
+	\item Mixed: Recommendation from several different recommenders are presented at the same time.
+	\item Feature Combination: Feature from different recommendation data sources are thrown together into a single recommendation algorithm.
+	\item Cascade: On recommender refines the recommendation given by another.
+	\item Feature augmentation: Output from one technique is used as an input feature to another.
+	\item Meta-level: The model learned by one recommender is used as input to another.
+\end{itemize}
+\subsection{Issues in recommendation system}
+The issues \cite{recommend} that can result in the recommendation system can be described as follows:
+\begin{enumerate}
+\item Data Collection: The data used by recommedation engines can be categorized into explicit and implict data. Explicit is all data the user themselves feed into the system. The collection of explicit data must not be intrusive or time consuming. Implicit data source in e-commerce is the transaction data. Implicit data needs to be analyzed before it can be used to describe user features or user-item ratings.
+\item Cold Start/Ramp-Up: The cold start problem occurs when too little/no rating data is available in the inital state. The recommendation system then lack data to produce appropriate recommendations. They mostly occur in the learning models. Two cold start problems are new user problem and new item problem.
+\item Stability Vs Plasiticity: The converse of the cold start problem is the stability vs plasticity. When consumers have rated so many items their preferences in the established user profiles are difficultto change. 
+\item Sparsity: In most use cases for recommendation systems, due to the catalogue sizes of e-business vendors, the count of rating already obtained is very small related to the count of ratings that need to be predicted. But collaborative filtering techiques focuses on an overlap in ratings and have diffulties when the space of rating is sparse(few user have rated the similar items). Sparsity in the user-item rating matrix degrades the quality of the recommendations.
+\item Performance and Scaliblity: Performance and scalability are important issues for recommendation systems as e-commerce websites must be able to determine recommendations in real-time and often deal with huge data sets of millions of users and items. The big growth rates of e-business are making the sets even larger in the user dimension.
+\item Uer Input Consistency: Recommendation techniques that work with user-to-user correlations like collaborative filtering or demograhic, depends on more correlation coefficients between the users in a data set. Users can be categorized into three classes based on their corrleation coefficients with other users. The majority of users fall into the class of ``white sheep'', where there is a high rating corrleation with other users. Resulted engines can easily find recommendations for them. The opposite type is the ``black sheep'' where there are only few or noe correlating users. This makes it quite difficult to find recommendations for them. The bigger problem is the ``gray sheep'' problem where users have different opinions or an unusual taste that results in low correlation coefficients with many users. They fall on a border opinions or an unusal taste that result in low correlation coefficients with many users. They fall on a border between user tastes. Recommendations for them are very diffcult to find and they also cause different recommendations for their correlated users.
+\item Privacy: Privacy is an important issue in recommendation systems. To provide personalized recommendations, recommendation systems must know something regarding to users. In fact, the more the system know, the more precise the recommendation can get. Users are concerned about what information is gathered, how it is used, and if it is stored. These privacy affect both the collection of explicit and implicit data. Regarding explict data, users are not intrested to disclose information about themselves and their interests. If questionnaries get too personal, user may give false information in order to protect their privacy.
+\end{enumerate}
+\subsection{Recommendation Model for exprimentation}
+We are trying to expriment on how personality impacts on the collaborative filtering model and compare it with other some popular models(global baseline, latent factor).
+Hence the recommendation model used in the project are:
+\begin{itemize}
+\item Global Baseline Algorithm
+\item User to User collaborative filtering(with and without personality)
+\item Combination of Global Base line and user to user collaborative filtering
+\item Matrix Factorization
+\end{itemize}
+Therefore all together, 6 different recommendation model is studied in the project.
+\subsubsection{Global Baseline Algorithm}
+Global Baseline algorithm provides a mechanism to compute the unknownrating with baseline (i.e ``global effects'') estimates of corresponding users and items.
+Mathematically,
+Suppose $\mu$ be the system wide average rating, $b_x$ be the overall user rating deviation from system average and $b_i$ be the deviation in rating for an item $i$ then global base line algorithm rates an tiem $i$ for an user $x$ as:
+\begin{equation}\label{eq:baseline}
+	Global Baseline Estimate[R_{x,i}] = \mu + b_x + b_i
+\end{equation}
+\subsubsection{User to User collaborative filtering}
+\begin{itemize}
+	\item User to Rating matrix computation: User-rating matirx is computed with rating data of different users available from database or dataset.
+	\item Normalization of the rating: It is done in order to make the avg rating of the system zeros so that the unknown values can be padded with zeroes.
+Mathematically,
+Suppose $\mu_x$ be the average rating of the user x and $R_{x,i}$ reprents a rating of user $x$ on item $i$ then normalized rating for an user $x$ on item $i$ can be computed as:
+\begin{equation}\label{eq:normal}
+	Normalized Rating[NR_{x,i}] = R_{x,i} - \mu
+\end{equation}
+\item Computing similar user: In order two compute the similar user,two metrics has been used in the project i.e similarilty based on the rating matrix of the user and similarity based on the personality. In both of the cases the similar user is computed with the help of cosine similarity after the normalization of the rating.
+Mathematically,
+Suppose $r_a = [r_a1,r_a2,\cdots,r_an]$ be the user rating matrix of the user a and  $r_b = [r_b1,r_b2,\cdots,r_bn]$ be the user rating matrix of user b, then cosine similarity between user a and b can be obtained as:
+\begin{equation}
+	similarity_{a,b} = \frac{r_a1*r_b1 + r_a2*r_b2 +\cdots+ r_an*r_bn}{\sqrt{{r_a1}^2+{r_a2}^2+\cdots+{r_an}^2} * \sqrt{{r_b1}^2+{r_b2}^2+\cdots+{r_bn}^2} }  
+\end{equation}
+Similarly, person with similar personality is computed with the help of personality vector.
+\item Rating prediction: A rating for user $x$ on item $i$ with the help of $N$ neighbor is computed by taking the weighted average rating of the neighbors.
+\begin{equation}\label{eq:cf}
+	r_{x,i} = \frac{\sum_{y=1}^N s_{x,y}*r_{y,i}}{\sum_{y=1}^N s_{x,y}}
+\end{equation}
+\item Recommendation: After precdiction of the rating, top-N items can be recommended to the users.
+\end{itemize}
+\subsubsection{Combination of Global Baseline and User to User collaborative fitering}
+The equation \ref{eq:baseline} and \ref{eq:cf} can be combined as use togetheras:
+\begin{equation}
+	r_{x,i} = baseline_{x,i}+\frac{\sum_{y=1}^N s_{x,y}*(r_{y,i}-baseline_{y,i})}{\sum_{y=1}^N s_{x,y}}
+\end{equation}
+where,\\
+$r_{x,i}$ is the rating on item $i$ by user $x$ \\
+$baseline_{x,i}$ is the baseline estimate on item $i$ by user $x$ \\
+$baseline_{y,i}$ is the baseline estimate on item $i$ by user $y$ \\
+$s_{x,y}$ is the similarity between user $x$ and $y$ \\ 
+$N$ is the total neighbors used for the recommendation
+\subsubsection{Matrix Factorization}
+Matrix factorization \cite{latent} involves in a factorization of a matrix to find out tow or more matrices such that when fators are multiplied together, original matrix in obtained. In recommender system, the matrix facotrization is employed to predict the missing ratings such that the values would be consistent with the existing rating in the matrix. The intuition behind using matrix factorization, is that it is assumped there should be some latent features that determine how a user rates an item. For example two users would give high rating to a certain mumusic if they both like the singer of the music or if the music is of same genre. Hence if we can discover these latent features, we should be able to predict a rating with respect to a certain user and a certain item, because the features associated with the user should match with the features associated with the item.
+
+In trying to discover the different features, we also make the assumptions that the number of features would be smaller than the number of users and the number of items. Suppose we have a set $U$ of users and set $D$ of items. Let $R$ of size $|U| * |D| $ be the matrix that contains all the ratings that the users have assigned ot the items. Wealso assume tht we would like to discover $K$ latent features. So ourtask here is to find out two matrices $P$ of size $|U| * K$ and $Q$ of size ${|D| * K}$ such that their products approximates R.
+\begin{equation}
+\begin{split}
+	R \approx P*Q^T = \widehat{R}
+\end{split}
+\end{equation}
+In this ways each row of $P$ would represent the strength of the associations between a user and the features. Similarly, each row of $Q$ would represent the strength of the associates between an item and the features. To get the prediction of a raing of an item $d_j$ by $u_i$ we can calculate the dot product of the two vectors corresponding to the $u_i$ and $d_j$:
+\begin{equation}
+\begin{split}
+	\widehat{r_{ij}} & = {p_i}^Tq_j \\
+	 & = {\sum_{k=1}^K} p_{ik}q_{jk}
+\end{split}
+\end{equation}
+Now, in order to find a way to obtain $P$ and $Q$. One way to approach this problem is first initialize the two matrices with some values, calculate how 'different' their product is to $M$, and then try to minimize this difference iteratively. Such a method is called gradientdescent, aiming at finding a local minimum of the difference. The diffrence here, usually called the error between the estimated rating and the real rating, can be calculated by the following equation of each user-item pair:
+\begin{equation}
+\begin{split}
+	{e_{ij}}^2 & = (r_{ij} - \widehat{r_{ij}})^2 \\ 
+	& = (r_{ij}) - {\sum_{k=1}^K} p_{ik}q_{jk})^2
+\end{split}
+\end{equation}
+Here we consider the squared error because the estimated rating can be either higher or lower than the real rating.
+To minimize the error, we have to know in which direction we have to modify the values of $p_{ik}$ and $q_{kj}$. In order words, we need to know the gradient at the current values and therefore we differentiate the above equation with respect to those two variables separately:
+\begin{equation}
+\begin{split}
+	\frac{\partial {e_{ij}}^2}{\partial p_{ik}} & = -2(r_{ij}-\widehat{r_{ij}})(q_{kj}) \\
+	& = -2e_{ij}q_{kj}
+\end{split}
+\end{equation}
+And,
+\begin{equation}
+\begin{split}
+	\frac{\partial {e_{ij}}^2}{\partial q_{ik}} & = -2(r_{ij}-\widehat{r_{ij}})(p_{kj}) \\
+	& = -2e_{ij}p_{kj}
+\end{split}
+\end{equation}
+Now, we can formulate the update rules for both $p_{ik}$ and $q_{kj} $ as:
+\begin{equation}
+\begin{split}
+	p_{ik} &= p_{ik} + \alpha \frac{\partial {e_{ij}}^2}{\partial p_{ik}} \\ 
+	& = p_{ik}  + 2\alpha e_{ij} q_{kj}
+\end{split}
+\end{equation}
+And,
+\begin{equation}
+\begin{split}
+	q_{ik} &= q_{ik} + \alpha \frac{\partial {e_{ij}}^2}{\partial q_{ik}} \\ 
+	& = q_{ik}  + 2\alpha e_{ij} p_{ik}
+\end{split}
+\end{equation}
+Here, $\alpha$ is a constant called learning rate whose value determines the rate of approaching the minimum. Usually, $\alpha$ is chosen to be between 0.001 to 0.1, this is because if we make too large step towrds the minimum, we may run into the risk of missing the minimum and end up oscillating around minimum.
+Using the above rule we can then iteratively perform the operation until the error converges to it's minimum or run the process for the finite number of iteration.
+\paragraph{Regularization}\hfill
+
+Here, in order to avoid overfitting, regularization is introduced by adding the additional $\beta$ and modifying the squared error as:
+\begin{equation}
+	{e_{ij}}^2  = (r_{ij} - \sum_{k=1}^K p_{ik}q{kj})^2 + \frac{\beta}{2}\sum_{k=1}^2(|P|^2 + |Q|^2)
+\end{equation}
+Here, the new paramter $\beta$ is used to control the magnitudes of the user=feature and item-feature vector such that P and Q would give a good approximation of $R$ without having to contain large numbers. In pracitse, $\beta$ is set in range of 0.02. Now the new update rules for this squared error can be obtained similary as above and the new update rules becomes:
+
+\begin{equation}
+\begin{split}
+	p_{ik} &= p_{ik} + \alpha \frac{\partial {e_{ij}}^2}{\partial p_{ik}} \\ 
+	& = p_{ik}  + \alpha (2e_{ij} q_{kj} - \beta p_{ki})
+\end{split}
+\end{equation}
+And,
+\begin{equation}
+\begin{split}
+	q_{ik} &= q_{ik} + \alpha \frac{\partial {e_{ij}}^2}{\partial q_{ik}} \\ 
+	& = q_{ik}  + \alpha (2e_{ij} p_{ik} - \beta q_{kj})
+\end{split}
+\end{equation}
+Thus, in this way matrix factorization can be implemented as the recoommder system.
