--- a/major_project_report/main.tex
+++ b/major_project_report/main.tex
@@ -41,7 +41,7 @@
 \input{sec/literature_review}
 \input{sec/theoretical_background}
 \input{sec/system_analysis}
-\input{sec/system_design}
+\input{sec/methodology}
 \input{sec/system_implementation}
 \input{sec/tools_technologies}
 \input{sec/result}
